@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-04-28T00:57:15Z",
-  "count_outdated" : 253,
-  "uniques_outdated" : 187,
-  "count" : 254,
-  "uniques" : 188,
+  "timestamp" : "2025-05-25T01:02:28Z",
+  "count_outdated" : 254,
+  "uniques_outdated" : 188,
+  "count" : 255,
+  "uniques" : 189,
   "clones" : [
     {
-      "timestamp": "2025-04-27T00:00:00Z",
+      "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
